# medical-img-proc

./: README.md  pyproject.toml  x_ray_simulator_example.py
cuda-files/: backprojection.cu  projection.cu
examples/: x_ray_simulator_example.py
utils/: CudaWrapper.py  DicomCTParser.py  Logger.py  TomoFilter.py  VolumeVisualizer.py
